# ssspam

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  cloudbuild.yaml  justfile  otel-config.yaml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile
.github/workflows/: audit.yml  build.yaml  ci.yml  docker_build_and_push.yml  release.yml
src/: command.rs  config.rs  core.rs  lib.rs  main.rs  main2.rs  parser.rs  parser2.rs  play.rs  say.pest  scripting.rs  sound.rs  sslang.rs  web.rs
ssspam-bot/: Cargo.toml
ssspam-bot/src/: command.rs  config.rs  core.rs  lib.rs  main.rs  play.rs  scripting.rs  sound.rs  sslang.rs  web.rs
ssspam-proto/: Cargo.toml  build.rs
ssspam-proto/src/: lib.rs  ss.proto
ssspam-util/: Cargo.toml
