[package]
name = "ssspambot"
version = "0.2.4"
edition = "2021"
default-run = "ssspambot"

[dependencies]
anyhow = "1.0.64"
async_zip = "=0.0.6"
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive", "env"] }
clap-verbosity-flag = "1.0.1"
cloud-storage = { version = "0.11.1", default-features = false, features = ["rustls-tls"] }
counter = "0.5.6"
derive_builder = "0.11.2"
directories = "4.0.1"
dotenv = "0.15.0"
fern = "0.6.1"
glob = "0.3.0"
humantime = "2.1.0"
log = "0.4.17"
maud = "0.23.0"
moka = "0.9.4"
mp3-metadata = "0.3.4"
nom = "7.1.1"
notify = { version = "5.0.0", default-features = false, features = ["macos_kqueue"] }
once_cell = "1.14.0"
parking_lot = "0.12.1"
prettytable-rs = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serenity = { version = "0.11.5", features = ["cache", "framework", "standard_framework", "voice"] }
songbird = "0.3.0"
strsim = "0.10.0"
tempfile = "3.3.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
