[package]
name = "ssspambot"
version = "0.2.5"
edition = "2021"
default-run = "ssspambot"

[dependencies]
anyhow = "1.0.64"
async_zip = { version = "0.0.11", features = ["deflate"] }
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive", "env"] }
clap-verbosity-flag = "1.0.1"
cloud-storage = { version = "0.11.1", default-features = false, features = ["rustls-tls"] }
counter = "0.5.6"
derive_builder = "0.11.2"
dotenvy = "0.15.6"
glob = "0.3.0"
humantime = "2.1.0"
maud = "0.23.0"
moka = "0.9.4"
mp3-metadata = "0.3.4"
nom = "7.1.1"
notify = { version = "5.0.0", default-features = false, features = ["macos_kqueue"] }
once_cell = "1.14.0"
parking_lot = "0.12.1"
prettytable-rs = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serenity = { version = "0.11.5", features = ["cache", "framework", "standard_framework", "voice"] }
songbird = { git = "https://github.com/reiyw/songbird", branch = "hard-clip" }
strsim = "0.10.0"
tempfile = "3.3.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
